--- a/scorecard-service.properties
+++ b/scorecard-service.properties
@@ -1,2 +1,6 @@
 testprop.prop1=prop1
 testprop.prop3=default-prop3
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=test1
