--- a/product-service.properties
+++ b/product-service.properties
@@ -1,6 +1,8 @@
 testprop.prop1=prop1
 testprop.prop3=default-prop3
 
-spring.data.mongodb.host=192.168.160.192
+boot-test1.local-ip=192.168.160.192
+
+spring.data.mongodb.host=${boot-test1.local-ip}
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=test1
