--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,3 @@
 testprop.prop2=prop2
 
-boot-test1.local-ip=192.168.160.192
-boot-test1.eureka-url=http://${boot-test1.local-ip}:8762/eureka/
+boot-test1.eureka-url=http://192.168.160.192:8762/eureka/
